--- a/scss/_site-footer.scss
+++ b/scss/_site-footer.scss
@@ -18,7 +18,7 @@
 }
 
 #scroll-to-top {
-  background-color: var(--color-anchor);
+  background-color: var(--color-scheme);
   position: fixed;
   bottom: -2000px;
   right: 20px;
