--- a/scss/content/_header.scss
+++ b/scss/content/_header.scss
@@ -14,7 +14,7 @@
       color: var(--color-txt);
 
       &:hover {
-        color: var(--color-anchor);
+        color: var(--color-scheme);
       }
     }
   }
