--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -6,13 +6,14 @@ select {
   padding: .3em .5em;
   padding: .15em .25em;
   max-width: calc(100% - 1em);
+  border-radius: var(--border-radius);
 }
 
 input,
 textarea,
 select,
 button {
-  border: 0.0625em solid var(--color-anchor);
+  border: 0.0625em solid var(--color-scheme);
 }
 
 /* iOS not respecting border-radius */
@@ -37,21 +38,27 @@ button,
 .post-edit-link,
 .page-links > a,
 .post-tags > a {
-  background-color: var(--color-anchor);
+  background-color: var(--color-scheme);
   color: var(--color-txt-2);
   border: 0;
   border-radius: var(--border-radius);
-  padding: .15em .25em;
+  padding: .25em .50em;
   text-transform: uppercase;
   text-decoration: none;
   text-shadow: none;
   transition: all .3s ease-in-out;
+  font-size: 1.2rem;
 
   &:hover {
     background-color: var(--color-bg-2);
     border-color: var(--color-bg-2);
     text-decoration: none;
   }
+}
+
+.post-edit-link,
+.post-tags > a {
+  font-size: .8rem;
 }
 
 label {
@@ -77,7 +84,7 @@ fieldset {
   height: 50%;
   bottom: 0;
   margin-top: auto;
-  border: 0.0625em solid var(--color-anchor);
+  border: 0.0625em solid var(--color-scheme);
 }
 
 .search-form .search-field,
