--- a/scss/site-header/_navigation.scss
+++ b/scss/site-header/_navigation.scss
@@ -173,7 +173,7 @@ body.home {
       z-index: 100;
 
       a:hover {
-        color: var(--color-anchor);
+        color: var(--color-scheme);
       }
     }
   }
