--- a/scss/_elements.scss
+++ b/scss/_elements.scss
@@ -29,8 +29,8 @@ h6 { font-size: calc(var(--font-size) * 0.8); }
 
 /* Paragraphs */
 p {
-  line-height: 1.5em;
-  margin: 0 0 1.5em;
+  line-height: 1.8em;
+  margin: 0 0 var(--spacing);
 }
 
 /* Blockquotes */
@@ -54,10 +54,18 @@ table {
   border-width: 0.0625em 0 0 0.0625em;
   max-width: 100%;
   margin-bottom: 1.5em;
+  word-break: normal;
+}
+
+.wp-block-table.is-style-stripes td,
+.wp-block-table.is-style-stripes th {
+  border-color: var(--border-color);
 }
 
 td,
-th {
+th,
+.wp-block-table td,
+.wp-block-table th {
   border-width: 0 0.0625em 0.0625em 0;
   text-align: left;
   padding: .5em;
@@ -78,6 +86,10 @@ ol {
   padding: 0;
 }
 
+li {
+  line-height: 1.8em;
+}
+
 /* Address */
 address {
   font-style: italic;
@@ -85,7 +97,7 @@ address {
 
 /* Anchor */
 a {
-  color: var(--color-anchor);
+  color: var(--color-scheme);
   text-decoration: none;
   transition: .3s ease-in-out;
 }
@@ -111,11 +123,24 @@ code {
 }
 
 /* Horisontal rule tag */
-hr {
+hr,
+.wp-block-separator {
   width: 100%;
   border: none;
-  height: 0.0625em;
+  margin: var(--spacing) auto;
   background-color: var(--color-border);
+}
+
+hr:not(.is-style-dots),
+.wp-block-separatoz:not(.is-style-dots) {
+  height: 0.125em;
+  margin: var(--spacing) 0;
+  text-align: left;
+}
+
+hr.is-style-dots:before,
+.wp-block-separator.is-style-dots:before {
+  font-size: 1.5rem;
 }
 
 /* Insert tag */
