--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,7 +3,7 @@
   --color-bg-2:   #222222;
   --color-txt:    #222222;
   --color-txt-2:  #F4EDE7;
-  --color-anchor: #A87D34;
+  --color-scheme: #A87D34;
   --color-border: #222222;
   --color-tint:   #6B543E;
 
@@ -22,6 +22,9 @@
 $mobile:  420px;
 $tablet:  768px;
 $desktop: 1140px;
+
+$spacing: 10px;
+$spacingWide: 20px;
 
 @media (min-width: $tablet) {
   :root {
