--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
   Author URI: http://lokoydesign.github.io/
   Description: Custom theme for brilliant-pearl.com
   Requires at least: WordPress 5.0.0
-  Version: 1.2.1
+  Version: 1.2.2
   License: GNU General Public License v3 or later
   License URI: http://www.gnu.org/licenses/gpl-3.0.html  
   Tags: one-column, two-columns, right-sidebar, flexible-header, custom-background, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, full-width-template, post-formats, theme-options, threaded-comments, translation-ready, blog
   Text Domain: desmo2020
 
-  desmo2020 WordPress Theme, Copyright (C) 2019, Lokøy Design
+  desmo2020 WordPress Theme, Copyright (C) 2019-2020, Lokøy Design
   desmo2020 is distributed under the terms of the GNU GPL v3
 */
 /* Table of Contents
@@ -46,7 +46,7 @@
   --color-bg-2:   #222222;
   --color-txt:    #222222;
   --color-txt-2:  #F4EDE7;
-  --color-anchor: #A87D34;
+  --color-scheme: #A87D34;
   --color-border: #222222;
   --color-tint:   #6B543E;
   --font-family: 'Ubuntu', sans-serif;
@@ -517,8 +517,8 @@ h6 {
 
 /* Paragraphs */
 p {
-  line-height: 1.5em;
-  margin: 0 0 1.5em;
+  line-height: 1.8em;
+  margin: 0 0 var(--spacing);
 }
 
 /* Blockquotes */
@@ -542,10 +542,18 @@ table {
   border-width: 0.0625em 0 0 0.0625em;
   max-width: 100%;
   margin-bottom: 1.5em;
+  word-break: normal;
+}
+
+.wp-block-table.is-style-stripes td,
+.wp-block-table.is-style-stripes th {
+  border-color: var(--border-color);
 }
 
 td,
-th {
+th,
+.wp-block-table td,
+.wp-block-table th {
   border-width: 0 0.0625em 0.0625em 0;
   text-align: left;
   padding: .5em;
@@ -571,6 +579,10 @@ ol {
   padding: 0;
 }
 
+li {
+  line-height: 1.8em;
+}
+
 /* Address */
 address {
   font-style: italic;
@@ -578,7 +590,7 @@ address {
 
 /* Anchor */
 a {
-  color: var(--color-anchor);
+  color: var(--color-scheme);
   text-decoration: none;
   -webkit-transition: .3s ease-in-out;
   -o-transition: .3s ease-in-out;
@@ -602,11 +614,24 @@ cite {
 
 /* Code tag */
 /* Horisontal rule tag */
-hr {
+hr,
+.wp-block-separator {
   width: 100%;
   border: none;
-  height: 0.0625em;
+  margin: var(--spacing) auto;
   background-color: var(--color-border);
+}
+
+hr:not(.is-style-dots),
+.wp-block-separatoz:not(.is-style-dots) {
+  height: 0.125em;
+  margin: var(--spacing) 0;
+  text-align: left;
+}
+
+hr.is-style-dots:before,
+.wp-block-separator.is-style-dots:before {
+  font-size: 1.5rem;
 }
 
 /* Insert tag */
@@ -644,13 +669,15 @@ select {
   padding: .15em .25em;
   max-width: -webkit-calc(100% - 1em);
   max-width: calc(100% - 1em);
+  -webkit-border-radius: var(--border-radius);
+          border-radius: var(--border-radius);
 }
 
 input,
 textarea,
 select,
 button {
-  border: 0.0625em solid var(--color-anchor);
+  border: 0.0625em solid var(--color-scheme);
 }
 
 /* iOS not respecting border-radius */
@@ -675,18 +702,19 @@ button,
 .post-edit-link,
 .page-links > a,
 .post-tags > a {
-  background-color: var(--color-anchor);
+  background-color: var(--color-scheme);
   color: var(--color-txt-2);
   border: 0;
   -webkit-border-radius: var(--border-radius);
           border-radius: var(--border-radius);
-  padding: .15em .25em;
+  padding: .25em .50em;
   text-transform: uppercase;
   text-decoration: none;
   text-shadow: none;
   -webkit-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
+  font-size: 1.2rem;
 }
 
 input[type="submit"]:hover,
@@ -701,6 +729,11 @@ button:hover,
   background-color: var(--color-bg-2);
   border-color: var(--color-bg-2);
   text-decoration: none;
+}
+
+.post-edit-link,
+.post-tags > a {
+  font-size: .8rem;
 }
 
 fieldset {
@@ -727,7 +760,7 @@ fieldset {
   height: 50%;
   bottom: 0;
   margin-top: auto;
-  border: 0.0625em solid var(--color-anchor);
+  border: 0.0625em solid var(--color-scheme);
 }
 
 .search-form .search-field,
@@ -1070,7 +1103,7 @@ body.home .entry-header {
     z-index: 100;
   }
   #site-header-nav > li > ul a:hover {
-    color: var(--color-anchor);
+    color: var(--color-scheme);
   }
 }
 
@@ -1240,7 +1273,8 @@ main,
 main > section {
   display: grid;
   grid-template-columns: minmax(0, 100%);
-  grid-gap: var(--spacing);
+  grid-gap: -webkit-calc(var(--spacing) * 2);
+  grid-gap: calc(var(--spacing) * 2);
   -webkit-box-align: start;
   -webkit-align-items: start;
       -ms-flex-align: start;
@@ -1285,7 +1319,7 @@ main {
 
 .entry-header h1 a:hover,
 .entry-header h2 a:hover {
-  color: var(--color-anchor);
+  color: var(--color-scheme);
 }
 
 .site-featured-entry-header {
@@ -1360,23 +1394,33 @@ object {
 }
 
 .wp-caption,
-.gallery-item {
+.gallery-item,
+.wp-block-image,
+.wp-block-image figure,
+.blocks-gallery-image,
+.blocks-gallery-item {
   position: relative;
-  overflow: hidden;
   -webkit-border-radius: var(--border-radius);
           border-radius: var(--border-radius);
 }
 
-.wp-caption-text {
-  position: absolute;
+.wp-caption-text,
+.wp-block-image figcaption,
+.blocks-gallery-grid .blocks-gallery-image figcaption,
+.blocks-gallery-grid .blocks-gallery-item figcaption,
+.wp-block-gallery .blocks-gallery-image figcaption,
+.wp-block-gallery .blocks-gallery-item figcaption {
   background-color: rgba(0, 0, 0, 0.6);
   color: #FFFFFF;
+  position: absolute;
   left: 0;
   bottom: 0;
-  font-size: 0.8rem;
   padding: 1em;
   width: -webkit-calc(100% - 2em);
   width: calc(100% - 2em);
+  font-size: 0.8rem;
+  line-height: 1rem;
+  margin: 0;
 }
 
 figure {
@@ -1439,7 +1483,7 @@ figure {
 
 /* Content: Navigation */
 .page-links {
-  font-size: .8rem;
+  font-size: 1rem;
 }
 
 .page-links span,
@@ -1450,7 +1494,7 @@ figure {
 .page-links .current {
   background-color: var(--color-bg-2);
   color: var(--color-txt-2);
-  padding: .15em .25em;
+  padding: .25em .50em;
   -webkit-border-radius: var(--border-radius);
           border-radius: var(--border-radius);
 }
@@ -1474,7 +1518,7 @@ figure {
 
 .pagination .nav-links a,
 .pagination .nav-links span:not(.dots) {
-  background-color: var(--color-anchor);
+  background-color: var(--color-scheme);
   padding: .3em .5em;
   -webkit-border-radius: var(--border-radius);
           border-radius: var(--border-radius);
@@ -1521,7 +1565,7 @@ figure {
 
 .post-navigation .nav-previous a span:nth-child(3),
 .post-navigation .nav-next a span:nth-child(3) {
-  color: var(--color-anchor);
+  color: var(--color-scheme);
 }
 
 @media (min-width: 768px) {
@@ -1541,29 +1585,65 @@ figure {
 }
 
 /* Content: Alignment */
-.alignnone,
-.aligncenter,
-.alignleft,
-.alignright,
-.alignwide {
-  margin-top: var(--spacing);
-  margin-bottom: var(--spacing);
-}
-
-.alignright {
-  float: right;
-  margin: 0 0 1em 1em;
+.aligncenter {
+  display: block;
+  clear: both;
+  margin: 0 auto var(--spacing);
 }
 
 .alignleft {
   float: left;
-  margin: 0 1em 1em 0;
+  margin: 0 var(--spacing) var(--spacing) 0;
 }
 
-.aligncenter {
-  display: block;
+.alignright {
+  float: right;
+  margin: 0 0 var(--spacing) var(--spacing);
+  margin-right: 0;
+}
+
+article {
+  overflow: visible;
+}
+
+.alignwide {
+  width: 100%;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: var(--spacing);
+}
+
+.alignfull {
+  margin-left: -webkit-calc(50% - 50vw);
+  margin-left: calc(50% - 50vw);
+  max-width: -webkit-calc(100vw - 9px);
+  max-width: calc(100vw - 9px);
+  width: -webkit-calc(100vw - 9px);
+  width: calc(100vw - 9px);
+  margin-bottom: var(--spacing);
+}
+
+@media (min-width: 1220px) {
+  .alignwide {
+    width: -webkit-calc(100% + var(--spacing) * 2);
+    width: calc(100% + var(--spacing) * 2);
+    max-width: -webkit-calc(100% + var(--spacing) * 2);
+    max-width: calc(100% + var(--spacing) * 2);
+    margin-left: -webkit-calc(var(--spacing) * -1);
+    margin-left: calc(var(--spacing) * -1);
+  }
+}
+
+@media (min-width: 460px) {
+  .alignfull {
+    margin-left: -webkit-calc(50% - 50vw + 8.5px);
+    margin-left: calc(50% - 50vw + 8.5px);
+    max-width: -webkit-calc(100vw - 17px);
+    max-width: calc(100vw - 17px);
+    width: -webkit-calc(100vw - 17px);
+    width: calc(100vw - 17px);
+  }
 }
 
 /* Clear floats */
@@ -1657,17 +1737,13 @@ body.archive .format-link article {
   color: var(--color-txt-2);
 }
 
-.wp-block-gallery {
-  margin-left: 0;
-}
-
 .wp-block-button {
-  margin-top: var(--spacing);
   margin-bottom: var(--spacing);
 }
 
-.wp-block-button__link {
-  background-color: var(--color-anchor);
+.wp-block-button__link,
+.wp-block-file .wp-block-file__button {
+  background-color: var(--color-scheme);
   color: var(--color-txt-2);
   -webkit-border-radius: var(--border-radius);
           border-radius: var(--border-radius);
@@ -1676,14 +1752,15 @@ body.archive .format-link article {
   transition: all .3s ease-in-out;
 }
 
-.wp-block-button__link:hover {
+.wp-block-button__link:hover,
+.wp-block-file .wp-block-file__button:hover {
   background-color: var(--color-bg-2);
 }
 
 .is-style-outline .wp-block-button__link {
   background-color: transparent;
-  border-color: var(--color-anchor);
-  color: var(--color-anchor);
+  border-color: var(--color-scheme);
+  color: var(--color-scheme);
 }
 
 .is-style-outline .wp-block-button__link:hover {
@@ -1692,16 +1769,33 @@ body.archive .format-link article {
   color: var(--color-bg-2);
 }
 
+.wp-block-pullquote blockquote {
+  border: 0;
+}
+
+.wp-block-pullquote.is-style-solid-color {
+  -webkit-border-radius: var(--border-radius);
+          border-radius: var(--border-radius);
+}
+
+.wp-block-file .wp-block-file__button,
+.wp-block-file .wp-block-file__button-richtext-wrapper {
+  display: table;
+  margin: -webkit-calc(var(--spacing) * 0.5) 0 var(--spacing);
+  margin: calc(var(--spacing) * 0.5) 0 var(--spacing);
+  font-size: 1.2rem;
+}
+
 /* Content: Footer */
 .entry-footer {
   display: grid;
   grid-template-columns: minmax(0, 100%);
-  grid-gap: var(--spacing);
+  grid-gap: -webkit-calc(var(--spacing) * 2);
+  grid-gap: calc(var(--spacing) * 2);
 }
 
 .post-categories span:first-child,
 .post-tags span:first-child {
-  font-size: .8rem;
   font-weight: var(--font-weight-bold);
   text-transform: uppercase;
 }
@@ -1714,7 +1808,6 @@ body.archive .format-link article {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-  font-size: .8rem;
 }
 
 .post-tags > * {
@@ -1880,7 +1973,7 @@ body.archive .format-link article {
 }
 
 #scroll-to-top {
-  background-color: var(--color-anchor);
+  background-color: var(--color-scheme);
   position: fixed;
   bottom: -2000px;
   right: 20px;
