--- a/scss/block-editor-style.scss
+++ b/scss/block-editor-style.scss
@@ -64,3 +64,7 @@
 .editor-styles-wrapper .wp-block-gallery .blocks-gallery-item figcaption {
   position: relative !important;
 }
+
+.editor-rich-text__inline-toolbar.block-editor-rich-text__inline-toolbar {
+  margin-top: 50px;
+}
