--- a/scss/content/_header.scss
+++ b/scss/content/_header.scss
@@ -13,7 +13,8 @@
     a {
       color: var(--color-txt);
 
-      &:hover {
+      &:hover,
+      &:focus {
         color: var(--color-scheme);
       }
     }
