--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -49,7 +49,8 @@ button,
   transition: all .3s ease-in-out;
   font-size: 1.2rem;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: var(--color-bg-2);
     border-color: var(--color-bg-2);
     text-decoration: none;
