--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,20 +1,25 @@
 @charset "UTF-8";
-/*
-  Theme Name: desmo2020
-  Theme URI: https://github.com/lokoydesign/desmo2020
-  Author: Lokøy Design
-  Author URI: http://lokoydesign.github.io/
-  Description: Custom theme for brilliant-pearl.com
-  Requires at least: WordPress 5.0.0
-  Version: 1.2.2
-  License: GNU General Public License v3 or later
-  License URI: http://www.gnu.org/licenses/gpl-3.0.html  
-  Tags: one-column, two-columns, right-sidebar, flexible-header, custom-background, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, full-width-template, post-formats, theme-options, threaded-comments, translation-ready, blog
-  Text Domain: desmo2020
 
-  desmo2020 WordPress Theme, Copyright (C) 2019-2020, Lokøy Design
-  desmo2020 is distributed under the terms of the GNU GPL v3
+@mixin themeInfo() {
+/*
+  Theme Name: #{$name}
+  Theme URI: #{$themeURI}
+  Author: #{$author}
+  Author URI: #{$authorURI}
+  Description: #{$description}
+  Requires at least: #{$requires}
+  Version: #{$version}
+  License: #{$licenseFull}
+  License URI: #{$licenseURI}  
+  Tags: #{$tags}
+  Text Domain: #{$textDomain}
+
+  #{$name} WordPress Theme, Copyright (C) #{$copyrightYear}, #{$author}
+  #{$name} is distributed under the terms of the #{$license}
 */
+}
+
+@include themeInfo();
 
 /* Table of Contents
   -------------------------------
