--- a/style.css
+++ b/style.css
@@ -2,18 +2,18 @@
 /*
   Theme Name: desmo2020
   Theme URI: https://github.com/lokoydesign/desmo2020
-  Author: Lokøy Design
+  Author: Lokøy Design <kennethlokoy@gmail.com>
   Author URI: http://lokoydesign.github.io/
-  Description: Custom theme for brilliant-pearl.com
+  Description: Custom WordPress theme for Brilliant-Pearl
   Requires at least: WordPress 5.0.0
-  Version: 1.2.2
+  Version: 1.2.3
   License: GNU General Public License v3 or later
   License URI: http://www.gnu.org/licenses/gpl-3.0.html  
-  Tags: one-column, two-columns, right-sidebar, flexible-header, custom-background, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, full-width-template, post-formats, theme-options, threaded-comments, translation-ready, blog
+  Tags: one-column, flexible-header, custom-background, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, post-formats, theme-options, threaded-comments, translation-ready, blog
   Text Domain: desmo2020
 
-  desmo2020 WordPress Theme, Copyright (C) 2019-2020, Lokøy Design
-  desmo2020 is distributed under the terms of the GNU GPL v3
+  desmo2020 WordPress Theme, Copyright (C) 2019-2020, Lokøy Design <kennethlokoy@gmail.com>
+  desmo2020 is distributed under the terms of the GPL-3.0
 */
 /* Table of Contents
   -------------------------------
@@ -126,7 +126,7 @@
 }
 
 /* Normalize */
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -147,6 +147,13 @@ html {
  */
 body {
   margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
 }
 
 /**
@@ -717,15 +724,23 @@ button,
   font-size: 1.2rem;
 }
 
-input[type="submit"]:hover,
+input[type="submit"]:hover, input[type="submit"]:focus,
 input[type="button"]:hover,
+input[type="button"]:focus,
 input[type="reset"]:hover,
+input[type="reset"]:focus,
 button:hover,
+button:focus,
 .comment-edit-link:hover,
+.comment-edit-link:focus,
 .comment-reply-link:hover,
+.comment-reply-link:focus,
 .post-edit-link:hover,
+.post-edit-link:focus,
 .page-links > a:hover,
-.post-tags > a:hover {
+.page-links > a:focus,
+.post-tags > a:hover,
+.post-tags > a:focus {
   background-color: var(--color-bg-2);
   border-color: var(--color-bg-2);
   text-decoration: none;
@@ -801,6 +816,10 @@ fieldset {
 
 .site-header a {
   color: var(--color-txt-2);
+}
+
+.site-header img {
+  vertical-align: middle;
 }
 
 .site-identity {
@@ -1083,7 +1102,8 @@ body.home .entry-header {
     position: relative;
     margin: 0 1em 1em 0;
   }
-  #site-header-nav > li:hover > ul {
+  #site-header-nav > li:hover > ul,
+  #site-header-nav > li:focus-within > ul {
     display: grid;
   }
   #site-header-nav > li > ul {
@@ -1102,7 +1122,8 @@ body.home .entry-header {
     margin-top: 0px;
     z-index: 100;
   }
-  #site-header-nav > li > ul a:hover {
+  #site-header-nav > li > ul a:hover,
+  #site-header-nav > li > ul a:focus-within {
     color: var(--color-scheme);
   }
 }
@@ -1317,8 +1338,9 @@ main {
   color: var(--color-txt);
 }
 
-.entry-header h1 a:hover,
-.entry-header h2 a:hover {
+.entry-header h1 a:hover, .entry-header h1 a:focus,
+.entry-header h2 a:hover,
+.entry-header h2 a:focus {
   color: var(--color-scheme);
 }
 
@@ -1532,7 +1554,8 @@ figure {
 }
 
 .pagination .nav-links .page-numbers.current,
-.pagination .nav-links a:hover {
+.pagination .nav-links a:hover,
+.pagination .nav-links a:focus {
   background-color: var(--color-bg-2);
 }
 
@@ -1752,8 +1775,9 @@ body.archive .format-link article {
   transition: all .3s ease-in-out;
 }
 
-.wp-block-button__link:hover,
-.wp-block-file .wp-block-file__button:hover {
+.wp-block-button__link:hover, .wp-block-button__link:focus,
+.wp-block-file .wp-block-file__button:hover,
+.wp-block-file .wp-block-file__button:focus {
   background-color: var(--color-bg-2);
 }
 
@@ -1763,7 +1787,7 @@ body.archive .format-link article {
   color: var(--color-scheme);
 }
 
-.is-style-outline .wp-block-button__link:hover {
+.is-style-outline .wp-block-button__link:hover, .is-style-outline .wp-block-button__link:focus {
   background-color: transparent;
   border-color: var(--color-bg-2);
   color: var(--color-bg-2);
@@ -2015,7 +2039,7 @@ body.archive .format-link article {
           transform: rotate(-45deg);
 }
 
-#scroll-to-top:hover {
+#scroll-to-top:hover, #scroll-to-top:focus {
   background-color: var(--color-bg-2);
 }
 
